[package]
name = "paat-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.9"
futures = "0.3"
chrono = "0.4"
dialoguer = "0.10"
indicatif = "0.16"
log = "0.4"
paat-core = { path = "../paat-core" }
rodio = { version = "0.15", default-features = false, features = ["wav"] }
tokio = { version = "1", default-features = false, features = [
  "time",
  "signal",
  "rt",
  "macros",
  "rt-multi-thread",
] }
