[package]
name = "paat-cli"
description = "CLI for waiting a spot on a ferry"
version = "0.1.0"
edition = "2018"
authors = ["Kaarel Allemann <kaarelallemann@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/paat-core"
repository = "https://github.com/ebakoba/paat"
homepage = "https://github.com/ebakoba/paat"
readme = "../README.md"
categories = ["command-line-interface"]
keywords = ["ferry", "cli-tool", "cli"]

[dependencies]
anyhow = "1"
env_logger = "0.10"
futures = "0.3"
chrono = "0.4"
dialoguer = "0.10"
indicatif = "0.17"
log = "0.4"
paat-core = { path = "../paat-core", version = "0.1" }
tokio = { version = "1", default-features = false, features = [
  "time",
  "signal",
  "rt",
  "macros",
  "rt-multi-thread",
  "sync"
] }
