[package]
name = "paat-core"
description = "core functions for communicating with praamid.ee internal API"
version = "0.1.0"
edition = "2018"
authors = ["Kaarel Allemann <kaarelallemann@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/paat-core"
repository = "https://github.com/ebakoba/paat"
homepage = "https://github.com/ebakoba/paat"
readme = "../README.md"
categories = ["api-bindings"]
keywords = ["api-bindings", "internal-api", "ferry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
const_format = "0.2"
futures = "0.3"
log = "0.4"
reqwest = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1", default-features = false, features = ["time"] }
