[package]
name = "paat-core"
description = "core functions for communicating with praamid.ee internal API"
version = "0.1.0"
edition = "2018"
authors = ["Kaarel Allemann <kaarelallemann@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/paat-core"
repository = "https://github.com/ebakoba/paat"
homepage = "https://github.com/ebakoba/paat"
readme = "../README.md"
categories = ["api-bindings"]
keywords = ["api-bindings", "internal-api", "ferry"]

[dependencies]
anyhow = "1"
chrono = "0.4"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", branch = "main", default-features = false, features = ["tokio-runtime"], optional = true }
const_format = "0.2"
futures = "0.3"
lazy_static = "1"
log = "0.4"
rodio = { version = "0.15", default-features = false, features = ["wav"], optional = true }
reqwest = { version = "0.11", features= ["rustls"]}
send_wrapper = { version = "0.6", features = ["futures"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1", default-features = false, features = ["time", "sync"] }

[features]
default = ["music", "booking"]
music = ["rodio"]
booking = ["chromiumoxide"]

