[package]
name = "paat-tui"
description = "TUI for waiting a spot on a ferry"
version = "0.1.0"
edition = "2018"
authors = ["Kaarel Allemann <kaarelallemann@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/paat-core"
repository = "https://github.com/ebakoba/paat"
homepage = "https://github.com/ebakoba/paat"
readme = "../README.md"
categories = ["command-line-interface"]
keywords = ["ferry", "cli-tool", "tui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.9"
futures = "0.3"
chrono = "0.4"
crossterm = "0.23"
i18n-embed = { version = "0.13", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.6"
image2ascii = "0.2"
log = "0.4"
once_cell = "1"
paat-core = { path = "../paat-core", version = "0.1" }
rust-embed = "6"
tokio = { version = "1", default-features = false, features = [
  "time",
  "signal",
  "rt",
  "macros",
  "rt-multi-thread",
] }
tuirealm = "1"
tui-realm-stdlib = "1"
